# simulasi_modul_6

./: .gitignore  README.md  pyproject.toml
src/: app.py  klasifikasi_citra.py  klasifikasi_tabular.py  klasifikasi_teks.py
