[project]
name = "modul_6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "irultyo", email = "irul.tyo.7@gmail.com"},
]
dependencies = [
    "streamlit==1.37.0",
    "tensorflow>=2.17.0",
    "joblib>=1.4.2",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "streamlit run ./src/app.py"